--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="toplinks">
-        <a href="/docs.html">documentation</a>
-        <a href="/samples.html">samples</a>
+        <a href="https://ofsho.github.io/KrabbShell/docs">documentation</a>
+        <a href="https://ofsho.github.io/KrabbShell/samples">samples</a>
+        <a href="https://www.github.com/ofsho/krabbshell">source</a>
     </div>
     <div class="main">
         <div class="home">
