--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/krabb_logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/krabb_logo.webp" type="image/x-icon">
     <title>KrabbShell - Documentation</title>
     <link rel="stylesheet" href="javascript/styles/vs2015.css">
     <link rel="stylesheet" href="css/docs.css">
@@ -16,7 +16,7 @@
     <h3>Installation</h3>
     <p>To install Krabb you will need to go to the <a href="https://github.com/ofsho/KrabbShell">Repository</a>
     and go to the Releases section:</p>
-    <img src="assets/releases.png">
+    <img src="assets/releases.webp">
     <p>and install the <a href="https://github.com/ofsho/KrabbShell/releases">latest version</a> (the
     highest one) and click on your os installation.</p>
     <h4>KrabbShell is not available for Windows!</h4>
@@ -24,7 +24,7 @@
     <pre><code class="bash">chmod +x krabb
 mv ./krabb /usr/local/bin/krabb</code></pre>
     <p>Then you can run the krabb command in the terminal and you will see this prompt:</p>
-    <img src="assets/krabbprompt.png" class="kpmp">
+    <img src="assets/krabbprompt.webp" class="kpmp">
     <p>If you see this than everything is good.</p>
     <h3>Hello World</h3>
     <p>To print Hello World (usually the simplest program) you would need to open your
@@ -32,11 +32,11 @@ mv ./krabb /usr/local/bin/krabb</code></pre>
     and run these commands:</p>
     <pre><code class="bash">echo "Hello, world!"</code></pre>
     <p>This will print "Hello, world!" like this:</p>
-    <img src="assets/hello_world_out.png" class="kpmp">
+    <img src="assets/hello_world_out.webp" class="kpmp">
     <p>To show output in krabb you would need to use the echo command which prints output
     and everything after the echo command will be printed. For example lets print Hi,
     This is Krabb Shell.</p>
     <p>The code for that looks like this:</p>
-    <img src="assets/hello_world_out_2.png" class="kpmp">
+    <img src="assets/hello_world_out_2.webp" class="kpmp">
 </body>
 </html>
