--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/krabb_logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/krabb_logo.webp" type="image/x-icon">
     <title>KrabbShell</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -15,7 +15,7 @@
     </div>
     <div class="main">
         <div class="home">
-            <img class="krabbLogo" src="assets/krabb_logo.jpg">
+            <img class="krabbLogo" src="assets/krabb_logo.webp">
             <h1>Krabb Shell</h1>
             <p>Krabb Shell is a simple shell</p>
         </div>
