--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="main">
         <div class="home">
-            <img class="krabbLogo" src="assets/krabb_logo.webp">
+            <img class="krabbLogo" width="450px" height="300px" src="assets/krabb_logo.webp" alt="logo">
             <h1>Krabb Shell</h1>
             <p>Krabb Shell is a simple shell</p>
         </div>
