--- a/index.html
+++ b/index.html
@@ -6,18 +6,35 @@
     <link rel="shortcut icon" href="assets/krabb_logo.webp" type="image/x-icon">
     <title>KrabbShell</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="javascript/styles/vs2015.css">
+    <script src="javascript/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
     <div class="toplinks">
-        <a href="https://ofsho.github.io/KrabbShell/docs">documentation</a>
+        <a href="https://ofsho.github.io/KrabbShell/docs/intro">documentation</a>
         <a href="https://ofsho.github.io/KrabbShell/samples">samples</a>
+        <a href="https://github.com/ofsho/KrabbShell/wiki/Function-Index-(standard-library-and-builtins-only)">builtins refrence</a>
+        <a href="https://ofsho.github.io/KrabbShell/refrence">refrence</a>
+        <a href="https://ofsho.github.io/KrabbShell/styleguide">style guide</a>
+        <a href="https://ofsho.github.io/KrabbShell/package/packageindex">package index</a>
+        <a class="lnk" href="https://ofsho.github.io/KrabbShell/docs/errors">error list</a>
         <a href="https://www.github.com/ofsho/krabbshell">source</a>
+        <a href="https://github.com/ofsho/KrabbShell/releases/tag/0.0.1">install</a>
     </div>
     <div class="main">
         <div class="home">
             <img class="krabbLogo" width="450px" height="300px" src="assets/krabb_logo.webp" alt="logo">
             <h1>Krabb Shell</h1>
-            <p>Krabb Shell is a simple shell</p>
+            <p>Krabb Shell is a simple shell made in C</p>
+            <br><br><br><br><br><br><br><br><br>
+            <div class="ttm">
+                <h1 class="ttm">In the next version:</h1>
+                <pre><code class="bash">var i = 0
+echo $i
+if (i == 0){
+    echo "i is 0"
+}</code></pre></div>
         </div>
     </div>
 </body>
